--- a/src/main/webapp/WEB-INF/velocity/views/store/checkout.vm
+++ b/src/main/webapp/WEB-INF/velocity/views/store/checkout.vm
@@ -78,6 +78,7 @@
 				<div id="member" class="tab-pane fade in active">
 					<div id="valid-member"></div>
 	          		<form id="form-member" action="#springUrl('/purchaseMember')" method="POST" class="form-horizontal">
+	          			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 	          			<div class="form-group">
 	          				<label class="col-sm-2 control-label">Email</label>
 	          				<div class="col-sm-10">
@@ -95,6 +96,7 @@
 	        	<div id="guest" class="tab-pane fade">
 	        		<div id="valid-guest"></div>
 	          		<form id="form-guest" action="#springUrl('/purchaseGuest')" method="POST" class="form-horizontal">
+	          			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 	          			<div class="form-group">
 	          				<label class="col-sm-3 control-label">Name</label>
 	          				<div class="col-sm-9">
